# deepfield

./: .gitignore  README.md  main.py  pyproject.toml  requirements.txt  test.py
design/: parts.md  parts.txt
src/: data.py  hydra.py  hydrogen_scanner.py  main.py  mock_rpi.py  test.py
src/positioning/: gps.py  planetary_drive.py  raspi-blinka.py  stepper.py
src/templates/: dashboard.html
test/: test_scan.py
test/templates/: dashboard.html
